--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -110,11 +110,12 @@ jobs:
       # --------------------------------------------
       # Setup python
       # --------------------------------------------
-      - name: Setup - Python
-        uses: actions/setup-python@v1
-        with:
-          python-version: 3.6
-          architecture: x64
+      # TODO: remove if unnessecary
+      # - name: Setup - Python
+      #   uses: actions/setup-python@v1
+      #   with:
+      #     python-version: 3.6
+      #     architecture: x64
       
       # --------------------------------------------
       # Setup Java and xvfb
