Fix typo in github workflow - (Task #55)
Causing missing release builds.

---
Task #55: Release 0.2.0

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -252,7 +252,7 @@ jobs:
           zip -r ./deploy/secured/VirtualSatellite4_FreeCAD_mod_Release_$VERSION.zip ./VirtualSatelliteCAD -x "*/.*"
           tar --xform s:'^./':: --exclude="*/.*" -czvf ./deploy/secured/VirtualSatellite4_FreeCAD_mod_Release_$VERSION.tar.gz ./VirtualSatelliteCAD
           popd
-        if: ${{ steps.build_decision.outputs.deploy_type == 'release'}}
+        if: ${{ steps.build_decision.outputs.build_type == 'release'}}
      
       # ---------------------------------------------
       # Deploying to github releases
